# flyMS

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc.yaml  CMakeLists.txt  README.md  action.yml  entrypoint.sh  flyMS_build.sh
.github/actions/: action.yml
.github/workflows/: main.yml  pages.yml
app/: CMakeLists.txt  PruManager.cc  flyMS.cc  flyMS_app.cc  flyStereo_interface.cc  mission_interface.cc  pru_handler_app.cc  test_webserver.cc
cmake/: code_coverage.cmake  px4_add_library.cmake  toolchain.cmake  unit_test_helpers.cmake
config/: flyMSConfig_dji_450.yaml  params.yaml
docker/: Dockerfile  README.md  entrypoint.sh
docs/: CMakeLists.txt  Doxyfile.in  conf.py  connection_guide.md  coordinate_systems.md  first_time_setup.md  flyMS_docs.md  index.md  index.rst.bak  introduction.md  process_diagram.md
docs/api_reference/: controller.md  flyMS_docs.md  hardware.md  ipc.md  logging.md  pru.md  util.md
lib/: CMakeLists.txt
lib/filter/: CMakeLists.txt  filter.c  filter.h
lib/flyMS/: AttitudeController.h  CMakeLists.txt  DigitalFilter.cc  DigitalFilter.hpp  FlightCore.cc  FlightCore.h  RedisInterface.cc  RedisInterface.h  Setpoint.cc  config_requestor.cc  config_requestor.h  debug_mode.hpp  flyMS.cc  flyMS.h  gps.cc  gps.h  mavlink_interface.cc  mavlink_interface.h  position_controller.cc  position_controller.h  position_generator.h  pru_client.cc  pru_client.h  ready_check.cc  ready_check.h  redis_interface.h  setpoint.cc  setpoint.h
lib/flyMS/common/: constants.h  state_data.h  trpy.h  vio_data.h
lib/flyMS/controller/: AttitudeController.cc  AttitudeController.h  CMakeLists.txt  DigitalFilter.cc  DigitalFilter.h  DigitalFilter.hpp  Setpoint.cc  Setpoint.h  constants.h  position_controller.cc  position_controller.h  position_generator.h
lib/flyMS/controller/test/: AttitudeController_tests.cc  CMakeLists.txt  DigitalFilter_tests.cc
lib/flyMS/controller/tests/: CMakeLists.txt
lib/flyMS/hardware/: CMakeLists.txt  Imu.cc  Imu.h  RemoteController.cc  RemoteController.h  Setpoint.cc  Setpoint.h  gps.cc  gps.h
lib/flyMS/hardware/pru/: PruManager.h  PruRequester.h  pru_messages.h
lib/flyMS/imu/: Imu.cc  Imu.h  base.cc  base.h  dmp.cc  dmp.h
lib/flyMS/ipc/: CMakeLists.txt
lib/flyMS/ipc/mavlink/: MavlinkParser.h  MavlinkRedisPub.h  MavlinkRedisSub.cc  MavlinkRedisSub.h  MavlinkRedisSubQueue.h  MavlinkUart.cc  MavlinkUart.h
lib/flyMS/ipc/redis/: RedisPublisher.h  RedisSubscriber.cc  RedisSubscriber.h  RedisSubscriberQueue.h  redis_default_connection_opts.h
lib/flyMS/ipc/test/: CMakeLists.txt  mavlink_redis_tests.cc  redis_tests.cc
lib/flyMS/ipc/tests/: CMakeLists.txt  mavlink_redis_tests.cc  redis_tests.cc
lib/flyMS/ipc/uart/: Uart.cc  Uart.h
lib/flyMS/pru/: CMakeLists.txt  PruManager.h  PruRequester.h
lib/flyMS/redis/: MavlinkRedisSub.cc  MavlinkRedisSub.h  RedisPublisher.h  RedisSubscriber.cc  RedisSubscriber.h
lib/flyMS/tests/: CMakeLists.txt  DigitalFilter_tests.cc  replayFlight.cpp
lib/flyMS/types/: flight_filters.h  flight_mode.h  state_data.h  vio_data.h
lib/flyMS/ulog/: ulog.cc  ulog.h  ulog_messages.h
lib/flyMS/util/: CMakeLists.txt  config_requestor.cc  config_requestor.h  debug_mode.h  pid_file.cc  pid_file.h  ready_check.cc  ready_check.h  yaml_serialization.h
lib/pru_handler/: CMakeLists.txt  pru_handler.cc  pru_handler.h
scripts/: calibrate_escs.sh  debian_sudoers  flyMS_webserver.py  get_data.py  install_flyMS.sh  post_install.sh  requirements.txt  uninstall_flyMS.sh
scripts/post_process/: read_data.m
scripts/services/: PruManager.service  flyMS.service  flyMS_webserver.service  mem_permissions.service  mission_interface.service  pruHandler.service  pru_handler.service  redis.service
webserver/: calibration.py  config_data.py  flyMSConfig.py  get_data.py  webserver.py
webserver/static/css/: calibration.css  calibration.css.map  calibration.scss  config.css  config.css.map  config.scss  index.css  index.css.map  index.scss
webserver/static/js/: calibration.js  config_controller.js  config_setpoint.js  nav.js
webserver/templates/: calibration.html  config_controller.html  config_setpoint.html  index.html  nav.html
